# PostText

./: .gitignore
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs
api/src/http/: error.rs  mod.rs  mw.rs  post.rs  user.rs
front/: package-lock.json  package.json
front/src/: main.tsx
front/src/components/: InfiniteScrollTrigger.tsx
front/src/pages/: index.tsx  login.tsx  sign-up.tsx
front/src/styles/: _button.scss  _config.scss  _globals.scss  _pages.scss  index.scss
