[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
bcrypt = "0.14"
chrono = "0.4.24"
serde = { version = "1.0.160", features = ["derive"]}
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mysql", "uuid", "macros", "time"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.3.0", features = ["cors"] } 
urandom = "0.1.1"
